--- a/app/src/main/res/layout/item_github_repository.xml
+++ b/app/src/main/res/layout/item_github_repository.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/normal_margin"
@@ -15,7 +16,6 @@
         android:id="@+id/repositoryFL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="true"
         android:focusable="true"
         android:foreground="?attr/selectableItemBackground">
 
@@ -40,6 +40,7 @@
                 android:layout_marginEnd="@dimen/normal_margin"
                 android:ellipsize="end"
                 android:maxLines="1"
+                android:fontFamily="@font/nunito_bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/avatarIMG"
                 app:layout_constraintTop_toTopOf="parent"
