--- a/app/src/main/res/layout/fragment_repository_list.xml
+++ b/app/src/main/res/layout/fragment_repository_list.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/repositoryRCL"
+    android:id="@+id/pullToRefresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.RepositoryActivity"
-    tools:listitem="@layout/item_github_repository"
-    tools:itemCount="5"/>
+    tools:context=".ui.RepositoryActivity">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/repositoryRCL"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:itemCount="5"
+        tools:listitem="@layout/item_github_repository" />
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
