--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,22 @@
         <item name="fontFamily">@font/nunito_regular</item>
     </style>
 
+    <style name="ButtonDefault" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:padding">@dimen/large_padding</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="Widget.App.ShapeableImageView" parent="Widget.MaterialComponents.ShapeableImageView">
+        <item name="shapeAppearance">
+            ?attr/shapeAppearanceSmallComponent
+        </item>
+        <item name="shapeAppearanceOverlay">
+            @style/ShapeAppearanceOverlay.App.CornerSize50Percent
+        </item>
+        <item name="strokeWidth">1dp</item>
+        <item name="strokeColor">?attr/colorPrimary</item>
+    </style>
+
 </resources>
