--- a/app/src/main/res/layout/activity_repository.xml
+++ b/app/src/main/res/layout/activity_repository.xml
@@ -6,12 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".ui.RepositoryActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:theme="@style/Theme.AppCompat.NoActionBar"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <fragment
         android:id="@+id/navHostFG"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         app:defaultNavHost="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:navGraph="@navigation/nav_graph" />
 
     <ProgressBar
