--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,16 +8,24 @@
     <fragment
         android:id="@+id/repositoryListFragment"
         android:name="br.com.mateus.githubrepositories.ui.RepositoryListFragment"
-        android:label="RepositoryListFragment"
+        android:label="@string/app_name"
         tools:layout="@layout/fragment_repository_list">
         <action
             android:id="@+id/action_repositoryListFragment_to_repositoryDetailsFragment"
             app:destination="@id/repositoryDetailsFragment" />
+        <action
+            android:id="@+id/action_repositoryListFragment_self"
+            app:destination="@id/repositoryListFragment" />
+        <argument
+            android:name="searchValue"
+            android:defaultValue=""
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/repositoryDetailsFragment"
         android:name="br.com.mateus.githubrepositories.ui.RepositoryDetailsFragment"
-        android:label="RepositoryDetailsFragment"
+        android:label="@string/app_name"
         tools:layout="@layout/fragment_repository_details">
 
         <argument
